add: PS2-P4 Explaination

--- a/problem_sets_code/ps2/PSET2.ipynb
+++ b/problem_sets_code/ps2/PSET2.ipynb
@@ -292,138 +292,6 @@
     "\n",
     "Như phân tích thì có 4 giá trị riêng khác không! Chúng ta mong đợi có 3 trị riêng khác 0 thì ma trận $D$ có hạng là 3\n",
     "\n",
-    "## Câu 3: Phương pháp Factorization (15 điểm)\n",
-    "Trong câu hỏi này, bạn sẽ khám phá phương pháp factorization, ban đầu được trình bày bởi Tomasi và Kanade, để giải quyết bài toán cấu trúc affine từ chuyển động. Bạn sẽ cài đặt các phương thức trong p2.py và hoàn thành những điều sau:\n",
-    "\n",
-    "***(a) Cài đặt phương pháp factorization như được mô tả trong bài giảng và trong ghi chú khóa học. Hoàn thành hàm factorization_method(). Mô tả ngắn gọn cách cài đặt của bạn trong báo cáo viết của bạn. [8 điểm code + 2 điểm viết]***\n",
-    "\n",
-    "Phương pháp này thì rất đơn giản thôi nhưng đôi khi nó cũng không được hiệu quả (vì nhiều assumption)\n",
-    "\n",
-    "Như note thì chúng ta sẽ chuẩn hóa các điểm:\n",
-    "\\begin{equation}\n",
-    "    \\hat{x_{ij}} = x_{ij} - \\bar{x_i}\n",
-    "\\end{equation}\n",
-    "\n",
-    "Sau đó concatenate nhiều điểm của nhiều camera!\n",
-    "\\begin{equation}\n",
-    "    D = \\begin{bmatrix}\n",
-    "        \\hat{x_{11}} & \\cdots & \\hat{x_{1n}} \\\\\n",
-    "        \\vdots & & \\vdots \\\\\n",
-    "        \\hat{x_{n1}} & \\cdots & \\hat{x_{nn}}\n",
-    "    \\end{bmatrix}\n",
-    "\\end{equation}\n",
-    "\n",
-    "Dung SVD để phân tách ma trận D thành ma trận M mà S\n",
-    "\\begin{align*}\n",
-    "    D &= U \\Sigma V^T \\\\\n",
-    "       &= \\begin{bmatrix}\n",
-    "             | & | & | & \\cdots \\\\\n",
-    "             u_1 & u_2 & u_3 & \\cdots \\\\\n",
-    "             | & | & | & \\cdots\n",
-    "        \\end{bmatrix} \\begin{bmatrix}\n",
-    "            \\sigma_1 & 0 & 0 & \\cdots \\\\\n",
-    "            0 & \\sigma_2 & 0 & \\cdots \\\\\n",
-    "            0 & 0 & \\sigma_3 & \\cdots \\\\\n",
-    "            \\vdots & \\vdots & \\vdots\n",
-    "        \\end{bmatrix} \\begin{bmatrix}\n",
-    "           - & v_1^T & - \\\\\n",
-    "           - & v_2^T & - \\\\\n",
-    "           - & v_3^T & - \\\\\n",
-    "           - & \\vdots & -\n",
-    "        \\end{bmatrix} \\\\\n",
-    "        &= U_3 \\sigma_3 V_3^T\n",
-    "        &= M S\n",
-    "\\end{align*}\n",
-    "\n",
-    "***(b) Chạy mã đã cung cấp vẽ các điểm 3D kết quả. So sánh kết quả của bạn với ground truth đã cung cấp. Kết quả nên trông giống hệt nhau, ngoại trừ việc tỷ lệ và xoay. Giải thích tại sao điều này xảy ra. [5 điểm]***\n",
-    "\n",
-    "Umm, Câu này được giảng trong note luôn\n",
-    "\n",
-    "\\begin{equation}\n",
-    "    D = M S = (M H^{-1}) (H S) = M' S'\n",
-    "\\end{equation}\n",
-    "\n",
-    "Nên sẽ có rất nhiều S (Structure) ứng với mỗi M (Motion)\n",
-    "\n",
-    "***(c) Tùy chọn: Báo cáo 4 giá trị kỳ dị từ phân tích SVD. Tại sao có 4 giá trị kỳ dị khác không? Bạn mong đợi có bao nhiêu giá trị kỳ dị khác không trong phiên bản lý tưởng hóa của phương pháp, và tại sao? [0 điểm]***\n",
-    "\n",
-    "``\n",
-    "[959.5852216  540.47613178 184.43174791  27.9151956 ]\n",
-    "``\n",
-    "\n",
-    "``\n",
-    "[264.54396508 210.06072009   7.21921783   5.12857709]\n",
-    "``\n",
-    "\n",
-    "Như phân tích thì có 4 giá trị riêng khác không! Chúng ta mong đợi có 3 trị riêng khác 0 thì ma trận $D$ có hạng là 3\n",
-    "\n",
-    "\n",
-    "\n",
-    "## Câu 3: Phương pháp Factorization (15 điểm)\n",
-    "Trong câu hỏi này, bạn sẽ khám phá phương pháp factorization, ban đầu được trình bày bởi Tomasi và Kanade, để giải quyết bài toán cấu trúc affine từ chuyển động. Bạn sẽ cài đặt các phương thức trong p2.py và hoàn thành những điều sau:\n",
-    "\n",
-    "***(a) Cài đặt phương pháp factorization như được mô tả trong bài giảng và trong ghi chú khóa học. Hoàn thành hàm factorization_method(). Mô tả ngắn gọn cách cài đặt của bạn trong báo cáo viết của bạn. [8 điểm code + 2 điểm viết]***\n",
-    "\n",
-    "Phương pháp này thì rất đơn giản thôi nhưng đôi khi nó cũng không được hiệu quả (vì nhiều assumption)\n",
-    "\n",
-    "Như note thì chúng ta sẽ chuẩn hóa các điểm:\n",
-    "\\begin{equation}\n",
-    "    \\hat{x_{ij}} = x_{ij} - \\bar{x_i}\n",
-    "\\end{equation}\n",
-    "\n",
-    "Sau đó concatenate nhiều điểm của nhiều camera!\n",
-    "\\begin{equation}\n",
-    "    D = \\begin{bmatrix}\n",
-    "        \\hat{x_{11}} & \\cdots & \\hat{x_{1n}} \\\\\n",
-    "        \\vdots & & \\vdots \\\\\n",
-    "        \\hat{x_{n1}} & \\cdots & \\hat{x_{nn}}\n",
-    "    \\end{bmatrix}\n",
-    "\\end{equation}\n",
-    "\n",
-    "Dung SVD để phân tách ma trận D thành ma trận M mà S\n",
-    "\\begin{align*}\n",
-    "    D &= U \\Sigma V^T \\\\\n",
-    "       &= \\begin{bmatrix}\n",
-    "             | & | & | & \\cdots \\\\\n",
-    "             u_1 & u_2 & u_3 & \\cdots \\\\\n",
-    "             | & | & | & \\cdots\n",
-    "        \\end{bmatrix} \\begin{bmatrix}\n",
-    "            \\sigma_1 & 0 & 0 & \\cdots \\\\\n",
-    "            0 & \\sigma_2 & 0 & \\cdots \\\\\n",
-    "            0 & 0 & \\sigma_3 & \\cdots \\\\\n",
-    "            \\vdots & \\vdots & \\vdots\n",
-    "        \\end{bmatrix} \\begin{bmatrix}\n",
-    "           - & v_1^T & - \\\\\n",
-    "           - & v_2^T & - \\\\\n",
-    "           - & v_3^T & - \\\\\n",
-    "           - & \\vdots & -\n",
-    "        \\end{bmatrix} \\\\\n",
-    "        &= U_3 \\sigma_3 V_3^T\n",
-    "        &= M S\n",
-    "\\end{align*}\n",
-    "\n",
-    "***(b) Chạy mã đã cung cấp vẽ các điểm 3D kết quả. So sánh kết quả của bạn với ground truth đã cung cấp. Kết quả nên trông giống hệt nhau, ngoại trừ việc tỷ lệ và xoay. Giải thích tại sao điều này xảy ra. [5 điểm]***\n",
-    "\n",
-    "Umm, Câu này được giảng trong note luôn\n",
-    "\n",
-    "\\begin{equation}\n",
-    "    D = M S = (M H^{-1}) (H S) = M' S'\n",
-    "\\end{equation}\n",
-    "\n",
-    "Nên sẽ có rất nhiều S (Structure) ứng với mỗi M (Motion)\n",
-    "\n",
-    "***(c) Tùy chọn: Báo cáo 4 giá trị kỳ dị từ phân tích SVD. Tại sao có 4 giá trị kỳ dị khác không? Bạn mong đợi có bao nhiêu giá trị kỳ dị khác không trong phiên bản lý tưởng hóa của phương pháp, và tại sao? [0 điểm]***\n",
-    "\n",
-    "``\n",
-    "[959.5852216  540.47613178 184.43174791  27.9151956 ]\n",
-    "``\n",
-    "\n",
-    "``\n",
-    "[264.54396508 210.06072009   7.21921783   5.12857709]\n",
-    "``\n",
-    "\n",
-    "Như phân tích thì có 4 giá trị riêng khác không! Chúng ta mong đợi có 3 trị riêng khác 0 thì ma trận $D$ có hạng là 3\n",
-    "\n",
     "- Do dữ liệu có nhiễu\n",
     "- Mô hình camera affine chỉ là xấp xỉ của mô hình phối cảnh thực tế\n",
     "\n",
@@ -461,7 +329,70 @@
     "\\end{align*}\n",
     "\n",
     "***(b) [Câu hỏi Lập trình] Để phân biệt cặp R, T chính xác, trước tiên chúng ta phải biết cách tìm điểm 3D cho trước các điểm tương ứng khớp trong các ảnh khác nhau. Cài đặt ước tính tuyến tính của điểm 3D này trong linear_estimate_3d_point(). [5 điểm]***\n",
-    "\n"
+    "\n",
+    "Như trong bài giảng thì chúng ta sẽ xây dựng ma trận A:\n",
+    "\n",
+    "$$\n",
+    "    A = \\begin{bmatrix}\n",
+    "        x_i M_3 - M_1 \\\\\n",
+    "        y_i M_3 - M_2 \\\\\n",
+    "        \\vdots \\\\\n",
+    "        x_n M_3 - M_1 \\\\\n",
+    "        y_n M_3 - M_2\n",
+    "    \\end{bmatrix}\n",
+    "$$\n",
+    "\n",
+    "sao cho $A P = 0$ . Ở đây chỉ việc sử dụng SVD nữa thui hehe!\n",
+    "\n",
+    "***(c) [Câu hỏi Lập trình] Tuy nhiên, chúng ta có thể làm tốt hơn các ước tính tuyến tính, nhưng thường điều này thuộc về một số tối ưu hóa phi tuyến lặp lại. Để thực hiện loại tối ưu hóa này, chúng ta cần một số dư. Một cái đơn giản là lỗi tái chiếu của các điểm tương ứng. Điền vào các phương thức reprojection_error() và jacobian(), tính toán lỗi tái chiếu và Jacobian cho một điểm 3D và danh sách ảnh của nó. [5 điểm]***\n",
+    "\n",
+    "Yah, một bài đạo hàm ma trận đầu tiên trong khóa học hehe! Let's go\n",
+    "\n",
+    "Để dễ dàng trong đạo hàm ma trận thì các bạn nên tách nhỏ các bước làm:\n",
+    "\n",
+    "Đầu tiên chúng ta có\n",
+    "\n",
+    "$$\n",
+    "    \\begin{bmatrix}\n",
+    "        u \\\\ v \\\\ w\n",
+    "    \\end{bmatrix} = \\begin{bmatrix}\n",
+    "        m_{11} & m_{12} & m_{13} & m_{14} \\\\\n",
+    "        m_{21} & m_{22} & m_{23} & m_{24} \\\\\n",
+    "        m_{31} & m_{32} & m_{33} & m_{34} \\\\\n",
+    "        m_{41} & m_{42} & m_{43} & m_{44}\n",
+    "    \\end{bmatrix} \\begin{bmatrix}\n",
+    "        X \\\\ Y \\\\ Z \\\\ 1\n",
+    "    \\end{bmatrix}\n",
+    "$$\n",
+    "\n",
+    "Sau đó là:\n",
+    "\n",
+    "$$\n",
+    "    \\begin{bmatrix}\n",
+    "        x \\\\ y\n",
+    "    \\end{bmatrix} = \\begin{bmatrix}\n",
+    "        \\frac{u}{w} \\\\ \\frac{v}{w}\n",
+    "    \\end{bmatrix}\n",
+    "$$\n",
+    "\n",
+    "<img src=\"data/img.png\">\n",
+    "\n",
+    "Yah và giờ chỉ cần implement lại mà thôi!]\n",
+    "\n",
+    "***(d) [Câu hỏi Lập trình] Cài đặt thuật toán Gauss-Newton, tìm một xấp xỉ cho điểm 3D giảm thiểu lỗi tái chiếu này. Cài đặt thuật toán Gauss-Newton để tìm một ước tính cải thiện của điểm 3D trong hàm nonlinear_estimate_3d_point(). [6 điểm]***\n",
+    "\n",
+    "Về cơ bản thì câu này chỉ là nhớ tiến trình và code lại công thức thôi nên các bạn xem code nhé!\n",
+    "\n",
+    "***(e) [Câu hỏi Lập trình] Bây giờ cuối cùng, quay lại và phân biệt cặp R, T chính xác từ phần (a) bằng cách cài đặt phương thức estimate_RT_from_E(). [6 điểm]***\n",
+    "\n",
+    "- Bước 1: Tìm ra 4 cặp R, t có thể\n",
+    "- Bước 2: Ứng với mỗi cặp R, t\n",
+    "    - Duyệt qua từng điểm\n",
+    "        - Tính ma trận M1. M2 (M2 dựa vào R, t)\n",
+    "        - Tìm điểm 3D trong Camera 1.\n",
+    "    - Nếu điểm đó ở hai camera đều có z dương thì +1 vào biến count\n",
+    "    - R, t nào có nhiều điểm có z dương nhất thì chọn\n",
+    "- Bước 3: Return R, t"
    ]
   },
   {
